# weather_bot

./: .gitignore  pyproject.toml
src/: app.py
