[tool.poetry]
name = "weather-bot"
version = "0.1.0"
description = ""
authors = ["Valery Shcherbakov <val032606@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.7.0"
beautifulsoup4 = "^4.12.3"
pydantic-settings = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
